--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -13,7 +13,7 @@
         <span>Tradante</span>
       </div>
 
-      <span class="nav-date">12 May 2022</span>
+      <span class="nav-date">{{ date | date : "MMMM d, y" }}</span>
     </div>
     <!-- nav-session -->
 
