--- a/src/app/shared/component/search/search.component.html
+++ b/src/app/shared/component/search/search.component.html
@@ -13,6 +13,6 @@
     class="btn add-new-btn"
     [ngClass]="btnColor"
   >
-    <i class="fas fa-plus"></i> add new
+    <i class="fas fa-plus"></i>new
   </button>
 </form>
