--- a/src/app/modules/user/pages/user/user-form/user-form.component.html
+++ b/src/app/modules/user/pages/user/user-form/user-form.component.html
@@ -2,35 +2,18 @@
   <!-- <div class="employee-form">
     <div class="employee-form-input"> -->
   <app-select
+    [options]="employees"
     inputType="text"
     label="Employees"
     [control]="getControl('employeeId')"
   ></app-select>
-  <!-- <app-input
+
+  <app-select
+    [options]="roles"
     inputType="text"
-    label="roles"
-    [control]="getControl('shortName')"
-  ></app-input>
-  <app-select
-    [options]="test"
-    label="Department Type"
-    [control]="getControl('departmentTypeId')"
+    label="Roles"
+    [control]="getControl('roleId')"
   ></app-select>
-  <app-select
-    [options]="test"
-    label="City"
-    [control]="getControl('cityId')"
-  ></app-select>
-  <app-select
-    [options]="test"
-    label="Parent Department"
-    [control]="getControl('parentId')"
-  ></app-select>
-  <app-select
-    [options]="test"
-    label="Manager"
-    [control]="getControl('managerId')"
-  ></app-select> -->
 
   <button type="submit" class="btn btn-block">Add User</button>
 </form>
