--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -33,7 +33,7 @@
                   </a>
                 </li>
                 <li>
-                  <a routerLink="/resetpassword">
+                  <a routerLink="/reset">
                     <fa-icon [icon]="['fas', 'lock']"></fa-icon>Reset Password
                   </a>
                 </li>
