--- a/src/app/modules/auth/page/reset/reset.component.html
+++ b/src/app/modules/auth/page/reset/reset.component.html
@@ -1,6 +1,6 @@
 <div class="section-center">
   <form (ngSubmit)="onSubmit()" class="form" [formGroup]="resetForm">
-    <h4>Reset Password</h4>
+    <h4>{{ isFirstLogin ? "Reset your password" : "Change Your Password" }}</h4>
     <app-input
       *ngIf="!isFirstLogin"
       inputType="password"
