--- a/src/app/modules/auth/page/welcome/welcome.component.css
+++ b/src/app/modules/auth/page/welcome/welcome.component.css
@@ -4,3 +4,19 @@
   align-items: center;
   background: var(--primary-500);
 }
+
+.section-center.welcome {
+  background: var(--grey-200);
+}
+
+.section-center.welcome h5 {
+  color: var(--primary-500);
+  text-align: center;
+  font-weight: 600;
+}
+
+.section-center.welcome img {
+  width: 5rem;
+  height: 5rem;
+  margin: 0 auto;
+}
