--- a/src/app/modules/mission/page/mission/mission-list/mission-list.component.html
+++ b/src/app/modules/mission/page/mission/mission-list/mission-list.component.html
@@ -1,1 +1,33 @@
-<p>mission-list works!</p>
+<div class="mission-container d-flex h-100">
+  <div
+    class="mission-list-container col-xl-4 col-lg-5 col-md-6 h-100 bg-primary"
+  >
+    <div class="mission-filter">
+      <app-search></app-search>
+    </div>
+    <div class="missions-list overflow-auto">
+      <!-- This column will be 1/3 of the width on bigger screens, and will take up the whole screen on small screens -->
+      <h1>This is some text that will scroll vertically.</h1>
+    </div>
+  </div>
+  <div class="d-none h-100 d-md-block col-xl-8 col-lg-7 col-md-6 bg-success">
+    <!-- This column will be 2/3 of the width on bigger screens, and will disappear on small screens -->
+    <div class="mission-map d-none d-md-inline-block col-12 bg-danger">
+      <!-- This row will take 2/3 of the height -->
+      <h4>This is the first row</h4>
+      <p>This is some text in the first row.</p>
+    </div>
+    <div class="mission-detail col-12">
+      <!-- This row will take 1/3 of the height -->
+
+      <div class="col-12 col-lg-9 bg-info">
+        <!-- First column with a width of 5/6 on larger screens -->
+        <p>This is the first column.</p>
+      </div>
+      <div class="col-12 col-lg-3 bg-secondary">
+        <!-- Second column with a width of 1/6 on larger screens -->
+        <p>This is the second column.</p>
+      </div>
+    </div>
+  </div>
+</div>
