adding map support

--- a/src/app/modules/mission/page/mission/mission-list/mission-list.component.html
+++ b/src/app/modules/mission/page/mission/mission-list/mission-list.component.html
@@ -13,7 +13,9 @@
       </ng-container>
     </div>
   </div>
-  <div class="mission-map">Mission Map</div>
+  <div class="mission-map">
+    <app-mission-map></app-mission-map>
+  </div>
   <div class="mission-info">
     <app-mission-details></app-mission-details>
   </div>
