--- a/src/app/modules/hr/pages/employee/employee/employee.component.html
+++ b/src/app/modules/hr/pages/employee/employee/employee.component.html
@@ -46,17 +46,17 @@
 
       <div class="flex-grow-1 ms-3">
         <div class="d-flex justify-content-between align-items-center">
-          <p class="label">Department</p>
+          <p class="label p-0">Department</p>
           <p class="department">{{ employee.department.name }}</p>
         </div>
         <div class="d-flex justify-content-between align-items-center">
-          <p class="label">SSN</p>
+          <p class="label p-0">SSN</p>
           <p class="ssn">{{ employee.ssn }}</p>
         </div>
         <div
           class="card-number d-flex justify-content-between align-items-center"
         >
-          <p class="label">Card</p>
+          <p class="label p-0">Card</p>
           <p class="">{{ employee.activeCard?.number }}</p>
         </div>
       </div>
