mission form validation

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -10,7 +10,7 @@
           class="logo"
           alt="nav logo"
         />
-        <span>Tradante</span>
+        <span>Cleaner</span>
       </div>
 
       <span class="nav-date">{{ date | date : "MMMM d, y" }}</span>
