--- a/src/app/shared/component/select/select.component.html
+++ b/src/app/shared/component/select/select.component.html
@@ -25,6 +25,7 @@
     groupBy="selectedAllGroup"
     [selectableGroup]="isMultiple"
     [placeholder]="placeholder"
+    (change)="changeFn($any($event))"
   >
   </ng-select>
 </div>
